@@ -101,6 +101,7 @@
     <Compile Include="Hosting\RemotingHostClient.cs" />
     <Compile Include="Hosting\RemotingHostServer.cs" />
     <Compile Include="Language\AgentObject.cs" />
+    <Compile Include="Language\ErrorException.cs" />
     <Compile Include="Language\BaseBehavior.cs" />
     <Compile Include="Language\BaseClass.cs">
       <SubType>Code</SubType>
@@ -147,10 +148,12 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Language\IObjectDecorator.cs" />
+    <Compile Include="Language\LocalBlock.cs" />
     <Compile Include="Language\Message.cs" />
     <Compile Include="Language\NativeBehavior.cs" />
     <Compile Include="Language\MessageQueue.cs" />
     <Compile Include="Language\ObjectOperators.cs" />
+    <Compile Include="Language\Primitives.cs" />
     <Compile Include="Loader.cs" />
     <Compile Include="Machine.cs">
       <SubType>Code</SubType>
