@@ -1,0 +1,15 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+
+namespace AjTalk.Language
+{
+    public class Primitives
+    {
+        public static void RaiseException(Exception ex)
+        {
+            throw ex;
+        }
+    }
+}
